# greet-dbus

./: README.md  is-greet.sh
C/: CMakeLists.txt
C++/: CMakeLists.txt  README.md
C++/src/: main.cpp
C/src/: main.c
Js/: index.js  package-lock.json  package.json
OCaml/: README.md  dune  je-sappel-greet.ml
Python/: README.md  pyproject.toml
Python/src/greet/: __init__.py
Ruby/: Gemfile  README.md  je-sappel-greet.rb
Rust/: Cargo.toml
Rust/src/: main.rs
hs/: CHANGELOG.md  LICENSE  README.md  je-sappel-greet.cabal
hs/src/: Main.hs
