[project]
name = "je-sappel-greet"
version = "0.1.0"
description = "Greet DBus service"
authors = [{ name = "Jean-Pierre Geslin", email = "jarsop@outlook.com" }]
dependencies = ["asyncio>=3.4.3", "dbus-next>=0.2.3"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
je-sappel-greet = "greet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/greet"]
